chore:[CO-1019] Bulk apply common code clean-up (#461)
* chore:[memory] Make possible inner classes static to optimize memory footprint

* chore: remove un-necessary imports

* chore: cleanup of switch statements

- remove redundant cases and un-necessary returns

* chore: remove un-necessary returns

* chore: remove unnecessary continue statements

if they are the last reachable statements in the loop

* chore: simplify collection operations

* chore: simplify min/max calculation

replace complex minimum/maximum value calculation with Math.min/max

* chore: cleanup of redundant type cast expressions

* chore: cleanup of excessive range checks

* chore: simplify explicit array filling

replace with Arrays.fill()

* chore: remove redundant condition checks

Removes redundant conditions that are covered by further condition checks

* chore: remove redundant File instance creations

* chore: remove explicit array creation

* chore: simplify String usages

Removed redundant String constructors and calls to methods like toString() or substring() where they can be replaced with a simplified expression

* chore: [performance] avoid calls to Arrays.asList() with at most one argument

* chore: fix test for UniversalLexer with partial revert of d3819f8

remove redundant cases and un-necessary returns

* chore: replace extended for loops with enhanced one

* chore: replace string indexof with contains

* chore: remove unnecessary boxing

remove unnecessary wrapping of primitive values in objects

* chore: remove unnecessary boxing

replace Integer.valueOf with Integer.parseInt

* chore: remove unnecessary unboxing

replace explicit unwrapping of wrapped primitive values

* chore: remove explicit types with diamond operator

replace`new` expressions with type arguments that can be replaced a with diamond type <>

* chore: merge identical catch blocks together

* chore: replace try finally with try-with-resource